# mazrs

./: .gitignore  Cargo.toml  README.md
mazrs_cli/: Cargo.toml  README.md
mazrs_cli/src/: args.rs  cli.yaml  main.rs
mazrs_lib/: cargo.toml
mazrs_lib/src/: lib.rs
mazrs_lib/src/generate/: aldous_broder.rs  binary_tree.rs  hunt_and_kill.rs  mod.rs  sidewinder.rs  wilsons.rs
mazrs_lib/src/types/: cell.rs  grid.rs
mazrs_wasm/: Cargo.toml  build.sh
mazrs_wasm/src/: lib.rs
src/: args.rs  cli.yml  grid.rs  main.rs
src/generate/: aldous_broder.rs  binary_tree.rs  mod.rs  sidewinder.rs  wilson.rs
src/types/: cell.rs  grid.rs  mod.rs
www/: index.html  index.js  package.json  webpack.config.js
